[gd_scene load_steps=41 format=2]

[ext_resource path="res://src/main/ui/RegionSelectButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/main/ui/ImageButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/main/ui/menu/practice-high-scores.gd" type="Script" id=3]
[ext_resource path="res://src/main/ui/settings/SettingsMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/main/ui/menu/system-buttons.gd" type="Script" id=5]
[ext_resource path="res://src/main/ui/menu/theme/h4.theme" type="Theme" id=6]
[ext_resource path="res://src/main/ui/ButtonShortcutHelper.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/main/ui/UiMenuShortcut.tres" type="ShortCut" id=8]
[ext_resource path="res://src/main/ui/menu/theme/h3.theme" type="Theme" id=9]
[ext_resource path="res://src/main/ui/menu/drop-panel.tres" type="StyleBox" id=10]
[ext_resource path="res://src/main/ui/wallpaper/Wallpaper.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/main/puzzle/PuzzleHudStyleBox.tres" type="StyleBox" id=12]
[ext_resource path="res://src/main/ui/HighScoreTable.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/main/ui/menu/mode-buttongroup.tres" type="ButtonGroup" id=14]
[ext_resource path="res://src/main/ui/level-select/HookableLevelGradeLabel.tscn" type="PackedScene" id=15]
[ext_resource path="res://src/main/ui/MusicPopup.tscn" type="PackedScene" id=16]
[ext_resource path="res://src/main/ui/menu/theme/h2-font-outline.tres" type="DynamicFont" id=17]
[ext_resource path="res://src/main/ui/SceneTransitionCover.tscn" type="PackedScene" id=18]
[ext_resource path="res://src/main/ui/level-select/LevelSelectButton.tscn" type="PackedScene" id=19]
[ext_resource path="res://src/main/ui/level-select/HookableRegionGradeLabel.tscn" type="PackedScene" id=20]
[ext_resource path="res://src/main/ui/menu/paged-region-buttons.gd" type="Script" id=21]
[ext_resource path="res://src/main/ui/menu/region-submenu.gd" type="Script" id=22]
[ext_resource path="res://src/main/ui/level-select/level-submenu-description-panel.gd" type="Script" id=23]
[ext_resource path="res://src/main/ui/menu/level-submenu.gd" type="Script" id=24]
[ext_resource path="res://src/main/ui/menu/region-grade-labels.gd" type="Script" id=25]
[ext_resource path="res://src/main/ui/menu/paged-level-buttons.gd" type="Script" id=26]
[ext_resource path="res://src/main/ui/level-select/level-submenu-info-panel.gd" type="Script" id=27]
[ext_resource path="res://src/main/ui/level-select/level-grade-labels.gd" type="Script" id=28]
[ext_resource path="res://src/main/ui/menu/region-info-panel.gd" type="Script" id=29]
[ext_resource path="res://src/main/ui/menu/region-description-panel.gd" type="Script" id=30]
[ext_resource path="res://assets/main/ui/touch/close.png" type="Texture" id=31]
[ext_resource path="res://assets/main/ui/touch/close-pressed.png" type="Texture" id=32]
[ext_resource path="res://src/main/ui/menu/practice-menu.gd" type="Script" id=33]
[ext_resource path="res://src/main/ui/menu/practice-speed-selector.gd" type="Script" id=34]
[ext_resource path="res://src/main/ui/menu/theme/h2.theme" type="Theme" id=35]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.1, 0.094, 0.094, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="InputEventAction" id=4]
action = "ui_cancel"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.1, 0.094, 0.094, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=3]
resource_local_to_scene = true
bg_color = Color( 0.321569, 0.686275, 0.890196, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.423529, 0.262745, 0.192157, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="PracticeMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1024, 600 )
script = ExtResource( 33 )
_high_scores_path = NodePath("MainMenu/VBoxContainer/HighScores")
_level_button_path = NodePath("MainMenu/VBoxContainer/Level/ButtonHolder/Button")
_level_description_label_path = NodePath("MainMenu/VBoxContainer/Level/Desc")
_speed_selector_path = NodePath("MainMenu/VBoxContainer/Speed")
_start_button_path = NodePath("MainMenu/VBoxContainer/System/Start")

[node name="Wallpaper" parent="." instance=ExtResource( 11 )]

[node name="MainMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="MainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 10.0
margin_right = -50.0
margin_bottom = -10.0
custom_styles/panel = ExtResource( 10 )

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -25.0
custom_constants/separation = 20

[node name="Level" type="VBoxContainer" parent="MainMenu/VBoxContainer"]
margin_right = 984.0
margin_bottom = 109.0

[node name="Title" type="Label" parent="MainMenu/VBoxContainer/Level"]
margin_right = 984.0
margin_bottom = 45.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 17 )
text = "Level"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonHolder" type="Control" parent="MainMenu/VBoxContainer/Level"]
margin_top = 49.0
margin_right = 984.0
margin_bottom = 85.0
rect_min_size = Vector2( 0, 36 )

[node name="Button" type="Button" parent="MainMenu/VBoxContainer/Level/ButtonHolder" groups=["main_practice_inputs"]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -18.0
margin_right = 300.0
margin_bottom = 18.0
rect_min_size = Vector2( 600, 0 )
theme = ExtResource( 9 )
shortcut_in_tooltip = false
group = ExtResource( 14 )
text = "Sprint: Normal"

[node name="Desc" type="Label" parent="MainMenu/VBoxContainer/Level"]
margin_top = 89.0
margin_right = 984.0
margin_bottom = 109.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 6 )
text = "Score 200 points as quickly as possible!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speed" type="VBoxContainer" parent="MainMenu/VBoxContainer"]
margin_top = 155.0
margin_right = 984.0
margin_bottom = 244.0
size_flags_vertical = 6
script = ExtResource( 34 )

[node name="Title" type="Label" parent="MainMenu/VBoxContainer/Speed"]
margin_right = 984.0
margin_bottom = 45.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 17 )
text = "Speed"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slider" type="HSlider" parent="MainMenu/VBoxContainer/Speed" groups=["main_practice_inputs"]]
margin_left = 192.0
margin_top = 49.0
margin_right = 792.0
margin_bottom = 65.0
rect_min_size = Vector2( 600, 0 )
size_flags_horizontal = 4
theme = ExtResource( 6 )
max_value = 3.0
tick_count = 4

[node name="Labels" type="HBoxContainer" parent="MainMenu/VBoxContainer/Speed"]
margin_left = 188.0
margin_top = 69.0
margin_right = 796.0
margin_bottom = 89.0
rect_min_size = Vector2( 608, 0 )
size_flags_horizontal = 4
theme = ExtResource( 6 )

[node name="Normal" type="Label" parent="MainMenu/VBoxContainer/Speed/Labels"]
margin_right = 99.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "0"

[node name="Hard" type="Label" parent="MainMenu/VBoxContainer/Speed/Labels"]
margin_left = 103.0
margin_right = 302.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "1"
align = 1

[node name="Expert" type="Label" parent="MainMenu/VBoxContainer/Speed/Labels"]
margin_left = 306.0
margin_right = 504.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "2"
align = 1

[node name="Master" type="Label" parent="MainMenu/VBoxContainer/Speed/Labels"]
margin_left = 508.0
margin_right = 608.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "3"
align = 2

[node name="System" type="VBoxContainer" parent="MainMenu/VBoxContainer"]
margin_top = 295.0
margin_right = 984.0
margin_bottom = 431.0
size_flags_vertical = 10
custom_constants/separation = 10
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="MainMenu/VBoxContainer/System" groups=["main_practice_inputs"]]
margin_left = 402.0
margin_right = 582.0
margin_bottom = 60.0
rect_min_size = Vector2( 180, 60 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 9 )
shortcut_in_tooltip = false
text = "Start"

[node name="Settings" type="Button" parent="MainMenu/VBoxContainer/System" groups=["main_practice_inputs"]]
margin_left = 434.0
margin_top = 70.0
margin_right = 550.0
margin_bottom = 98.0
rect_min_size = Vector2( 116, 28 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 6 )
shortcut_in_tooltip = false
shortcut = ExtResource( 8 )
text = "Settings"

[node name="ShortcutHelper" parent="MainMenu/VBoxContainer/System/Settings" instance=ExtResource( 7 )]
action = "ui_cancel"

[node name="Quit" type="Button" parent="MainMenu/VBoxContainer/System" groups=["main_practice_inputs"]]
margin_left = 434.0
margin_top = 108.0
margin_right = 550.0
margin_bottom = 136.0
rect_min_size = Vector2( 116, 28 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 6 )
shortcut_in_tooltip = false
text = "Quit"

[node name="HighScores" type="Panel" parent="MainMenu/VBoxContainer"]
margin_left = 92.0
margin_top = 451.0
margin_right = 892.0
margin_bottom = 555.0
rect_min_size = Vector2( 800, 104 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = ExtResource( 12 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tables" type="HBoxContainer" parent="MainMenu/VBoxContainer/HighScores"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 5.0
margin_right = -20.0
margin_bottom = -5.0
custom_constants/separation = 200
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DailyTable" parent="MainMenu/VBoxContainer/HighScores/Tables" instance=ExtResource( 13 )]
margin_right = 280.0
margin_bottom = 94.0
daily = true

[node name="AllTimeTable" parent="MainMenu/VBoxContainer/HighScores/Tables" instance=ExtResource( 13 )]
margin_left = 480.0
margin_right = 760.0
margin_bottom = 94.0

[node name="RegionSubmenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 22 )
region_buttons_path = NodePath("Panel/VBoxContainer/Top/RegionButtons")

[node name="Backdrop" type="ColorRect" parent="RegionSubmenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.752941 )

[node name="Panel" type="Panel" parent="RegionSubmenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="RegionSubmenu/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
rect_min_size = Vector2( -10, 0 )
custom_constants/separation = 20

[node name="Label" type="Label" parent="RegionSubmenu/Panel/VBoxContainer"]
margin_right = 904.0
margin_bottom = 45.0
theme = ExtResource( 35 )
text = "Level Select"
align = 1

[node name="Top" type="Control" parent="RegionSubmenu/Panel/VBoxContainer"]
margin_top = 65.0
margin_right = 904.0
margin_bottom = 360.0
size_flags_vertical = 3

[node name="RegionButtons" type="HBoxContainer" parent="RegionSubmenu/Panel/VBoxContainer/Top"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -452.0
margin_top = -145.0
margin_right = 452.0
margin_bottom = 145.0
alignment = 1
script = ExtResource( 21 )
RegionButtonScene = ExtResource( 1 )

[node name="LeftArrow" type="Button" parent="RegionSubmenu/Panel/VBoxContainer/Top/RegionButtons"]
margin_left = 374.0
margin_top = 132.0
margin_right = 398.0
margin_bottom = 158.0
rect_min_size = Vector2( 24, 24 )
size_flags_vertical = 4
theme = ExtResource( 6 )
text = "<"

[node name="HBoxContainer" type="HBoxContainer" parent="RegionSubmenu/Panel/VBoxContainer/Top/RegionButtons"]
margin_left = 402.0
margin_right = 502.0
margin_bottom = 290.0
rect_min_size = Vector2( 0, 290 )
size_flags_vertical = 3
custom_constants/separation = 5

[node name="RegionButton" parent="RegionSubmenu/Panel/VBoxContainer/Top/RegionButtons/HBoxContainer" instance=ExtResource( 1 )]

[node name="RightArrow" type="Button" parent="RegionSubmenu/Panel/VBoxContainer/Top/RegionButtons"]
margin_left = 506.0
margin_top = 132.0
margin_right = 530.0
margin_bottom = 158.0
rect_min_size = Vector2( 24, 24 )
size_flags_vertical = 4
theme = ExtResource( 6 )
text = ">"

[node name="GradeLabels" type="Control" parent="RegionSubmenu/Panel/VBoxContainer/Top"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 25 )
GradeLabelScene = ExtResource( 20 )

[node name="Bottom" type="Control" parent="RegionSubmenu/Panel/VBoxContainer"]
margin_top = 380.0
margin_right = 904.0
margin_bottom = 480.0
rect_min_size = Vector2( 0, 100 )

[node name="HBoxContainer" type="HBoxContainer" parent="RegionSubmenu/Panel/VBoxContainer/Bottom"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Panel" parent="RegionSubmenu/Panel/VBoxContainer/Bottom/HBoxContainer"]
margin_right = 450.0
margin_bottom = 100.0
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 12 )
script = ExtResource( 30 )

[node name="MarginContainer" type="MarginContainer" parent="RegionSubmenu/Panel/VBoxContainer/Bottom/HBoxContainer/Description"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 5
custom_constants/margin_left = 20
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="RegionSubmenu/Panel/VBoxContainer/Bottom/HBoxContainer/Description/MarginContainer"]
margin_left = 20.0
margin_top = 5.0
margin_right = 430.0
margin_bottom = 95.0
size_flags_vertical = 1
theme = ExtResource( 6 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Panel" parent="RegionSubmenu/Panel/VBoxContainer/Bottom/HBoxContainer"]
margin_left = 454.0
margin_right = 904.0
margin_bottom = 100.0
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 12 )
script = ExtResource( 29 )

[node name="MarginContainer" type="MarginContainer" parent="RegionSubmenu/Panel/VBoxContainer/Bottom/HBoxContainer/Info"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 5
custom_constants/margin_left = 20
custom_constants/margin_bottom = 5

[node name="Label" type="Label" parent="RegionSubmenu/Panel/VBoxContainer/Bottom/HBoxContainer/Info/MarginContainer"]
margin_left = 20.0
margin_top = 5.0
margin_right = 430.0
margin_bottom = 95.0
size_flags_vertical = 1
theme = ExtResource( 6 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="RegionSubmenu"]
modulate = Color( 1, 1, 1, 0.627451 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Northeast" type="HBoxContainer" parent="RegionSubmenu/Buttons"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -512.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 110.0
rect_min_size = Vector2( 100, 100 )
mouse_filter = 2
custom_constants/separation = 10
alignment = 2

[node name="BackButton" parent="RegionSubmenu/Buttons/Northeast" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 402.0
margin_right = 502.0
margin_bottom = 100.0
size_flags_horizontal = 0
shortcut = SubResource( 5 )
icon = ExtResource( 31 )
expand_icon = true
normal_icon = ExtResource( 31 )
pressed_icon = ExtResource( 32 )

[node name="ShortcutHelper" parent="RegionSubmenu/Buttons/Northeast/BackButton" instance=ExtResource( 7 )]
action = "ui_cancel"

[node name="LevelSubmenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 24 )
level_buttons_path = NodePath("Panel/VBoxContainer/Top/LevelButtons")

[node name="Backdrop" type="ColorRect" parent="LevelSubmenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.752941 )

[node name="Panel" type="Panel" parent="LevelSubmenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="LevelSubmenu/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
rect_min_size = Vector2( -10, 0 )

[node name="Label" type="Label" parent="LevelSubmenu/Panel/VBoxContainer"]
margin_right = 904.0
margin_bottom = 45.0
theme = ExtResource( 35 )
text = "Level Select"
align = 1

[node name="Top" type="Control" parent="LevelSubmenu/Panel/VBoxContainer"]
margin_top = 49.0
margin_right = 904.0
margin_bottom = 376.0
size_flags_vertical = 3

[node name="LevelButtons" type="HBoxContainer" parent="LevelSubmenu/Panel/VBoxContainer/Top"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -452.0
margin_top = -145.0
margin_right = 452.0
margin_bottom = 145.0
alignment = 1
script = ExtResource( 26 )
LevelButtonScene = ExtResource( 19 )

[node name="LeftArrow" type="Button" parent="LevelSubmenu/Panel/VBoxContainer/Top/LevelButtons"]
margin_left = 354.0
margin_top = 132.0
margin_right = 378.0
margin_bottom = 158.0
rect_min_size = Vector2( 24, 24 )
size_flags_vertical = 4
theme = ExtResource( 6 )
text = "<"

[node name="GridContainer" type="GridContainer" parent="LevelSubmenu/Panel/VBoxContainer/Top/LevelButtons"]
margin_left = 382.0
margin_top = 115.0
margin_right = 522.0
margin_bottom = 175.0
size_flags_vertical = 4
columns = 6

[node name="Button" parent="LevelSubmenu/Panel/VBoxContainer/Top/LevelButtons/GridContainer" instance=ExtResource( 19 )]
margin_right = 140.0
margin_bottom = 60.0
rect_min_size = Vector2( 140, 60 )
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 3 )

[node name="RightArrow" type="Button" parent="LevelSubmenu/Panel/VBoxContainer/Top/LevelButtons"]
margin_left = 526.0
margin_top = 132.0
margin_right = 550.0
margin_bottom = 158.0
rect_min_size = Vector2( 24, 24 )
size_flags_vertical = 4
theme = ExtResource( 6 )
text = ">"

[node name="GradeLabels" type="Control" parent="LevelSubmenu/Panel/VBoxContainer/Top"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 28 )
GradeLabelScene = ExtResource( 15 )

[node name="Bottom" type="Control" parent="LevelSubmenu/Panel/VBoxContainer"]
margin_top = 380.0
margin_right = 904.0
margin_bottom = 480.0
rect_min_size = Vector2( 0, 100 )

[node name="HBoxContainer" type="HBoxContainer" parent="LevelSubmenu/Panel/VBoxContainer/Bottom"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Panel" parent="LevelSubmenu/Panel/VBoxContainer/Bottom/HBoxContainer"]
margin_right = 450.0
margin_bottom = 100.0
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 12 )
script = ExtResource( 23 )

[node name="MarginContainer" type="MarginContainer" parent="LevelSubmenu/Panel/VBoxContainer/Bottom/HBoxContainer/Description"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 5
custom_constants/margin_left = 20
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LevelSubmenu/Panel/VBoxContainer/Bottom/HBoxContainer/Description/MarginContainer"]
margin_left = 20.0
margin_top = 5.0
margin_right = 430.0
margin_bottom = 95.0
size_flags_vertical = 1
theme = ExtResource( 6 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Panel" parent="LevelSubmenu/Panel/VBoxContainer/Bottom/HBoxContainer"]
margin_left = 454.0
margin_right = 904.0
margin_bottom = 100.0
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 12 )
script = ExtResource( 27 )

[node name="MarginContainer" type="MarginContainer" parent="LevelSubmenu/Panel/VBoxContainer/Bottom/HBoxContainer/Info"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 5
custom_constants/margin_left = 20
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LevelSubmenu/Panel/VBoxContainer/Bottom/HBoxContainer/Info/MarginContainer"]
margin_left = 20.0
margin_top = 5.0
margin_right = 430.0
margin_bottom = 95.0
size_flags_vertical = 1
theme = ExtResource( 6 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="LevelSubmenu"]
modulate = Color( 1, 1, 1, 0.627451 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Northeast" type="HBoxContainer" parent="LevelSubmenu/Buttons"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -512.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 110.0
rect_min_size = Vector2( 100, 100 )
mouse_filter = 2
custom_constants/separation = 10
alignment = 2

[node name="BackButton" parent="LevelSubmenu/Buttons/Northeast" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 402.0
margin_right = 502.0
margin_bottom = 100.0
size_flags_horizontal = 0
shortcut = SubResource( 5 )
icon = ExtResource( 31 )
expand_icon = true
normal_icon = ExtResource( 31 )
pressed_icon = ExtResource( 32 )

[node name="ShortcutHelper" parent="LevelSubmenu/Buttons/Northeast/BackButton" instance=ExtResource( 7 )]
action = "ui_cancel"

[node name="SettingsMenu" parent="." instance=ExtResource( 4 )]

[node name="MusicPopup" parent="." instance=ExtResource( 16 )]

[node name="SceneTransitionCover" parent="." instance=ExtResource( 18 )]

[connection signal="level_started" from="LevelSubmenu" to="." method="_on_LevelSelect_level_started"]
[connection signal="visibility_changed" from="LevelSubmenu" to="." method="_on_LevelSubmenu_visibility_changed"]
[connection signal="pressed" from="LevelSubmenu/Buttons/Northeast/BackButton" to="LevelSubmenu" method="_on_BackButton_pressed"]
[connection signal="button_added" from="LevelSubmenu/Panel/VBoxContainer/Top/LevelButtons" to="LevelSubmenu/Panel/VBoxContainer/Top/GradeLabels" method="_on_LevelButtons_button_added"]
[connection signal="level_started" from="LevelSubmenu/Panel/VBoxContainer/Top/LevelButtons" to="LevelSubmenu" method="_on_LevelButtons_level_started"]
[connection signal="locked_level_selected" from="LevelSubmenu/Panel/VBoxContainer/Top/LevelButtons" to="LevelSubmenu/Panel/VBoxContainer/Bottom/HBoxContainer/Description" method="_on_LevelButtons_locked_level_selected"]
[connection signal="locked_level_selected" from="LevelSubmenu/Panel/VBoxContainer/Top/LevelButtons" to="LevelSubmenu/Panel/VBoxContainer/Bottom/HBoxContainer/Info" method="_on_LevelButtons_locked_level_selected"]
[connection signal="unlocked_level_selected" from="LevelSubmenu/Panel/VBoxContainer/Top/LevelButtons" to="LevelSubmenu/Panel/VBoxContainer/Bottom/HBoxContainer/Description" method="_on_LevelButtons_unlocked_level_selected"]
[connection signal="unlocked_level_selected" from="LevelSubmenu/Panel/VBoxContainer/Top/LevelButtons" to="LevelSubmenu/Panel/VBoxContainer/Bottom/HBoxContainer/Info" method="_on_LevelButtons_unlocked_level_selected"]
[connection signal="pressed" from="LevelSubmenu/Panel/VBoxContainer/Top/LevelButtons/LeftArrow" to="LevelSubmenu/Panel/VBoxContainer/Top/LevelButtons" method="_on_LeftArrow_pressed"]
[connection signal="pressed" from="LevelSubmenu/Panel/VBoxContainer/Top/LevelButtons/RightArrow" to="LevelSubmenu/Panel/VBoxContainer/Top/LevelButtons" method="_on_RightArrow_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/Level/ButtonHolder/Button" to="." method="_on_LevelButton_pressed"]
[connection signal="speed_changed" from="MainMenu/VBoxContainer/Speed" to="." method="_on_SpeedSelector_speed_changed"]
[connection signal="value_changed" from="MainMenu/VBoxContainer/Speed/Slider" to="MainMenu/VBoxContainer/Speed" method="_on_Slider_value_changed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/System/Quit" to="MainMenu/VBoxContainer/System" method="_on_Quit_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/System/Settings" to="SettingsMenu" method="_on_Settings_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/System/Start" to="." method="_on_Start_pressed"]
[connection signal="region_started" from="RegionSubmenu" to="." method="_on_RegionSubmenu_region_started"]
[connection signal="visibility_changed" from="RegionSubmenu" to="." method="_on_RegionSubmenu_visibility_changed"]
[connection signal="pressed" from="RegionSubmenu/Buttons/Northeast/BackButton" to="RegionSubmenu" method="_on_BackButton_pressed"]
[connection signal="button_added" from="RegionSubmenu/Panel/VBoxContainer/Top/RegionButtons" to="RegionSubmenu/Panel/VBoxContainer/Top/GradeLabels" method="_on_RegionButtons_button_added"]
[connection signal="region_selected" from="RegionSubmenu/Panel/VBoxContainer/Top/RegionButtons" to="RegionSubmenu/Panel/VBoxContainer/Bottom/HBoxContainer/Description" method="_on_RegionButtons_region_selected"]
[connection signal="region_selected" from="RegionSubmenu/Panel/VBoxContainer/Top/RegionButtons" to="RegionSubmenu/Panel/VBoxContainer/Bottom/HBoxContainer/Info" method="_on_RegionButtons_region_selected"]
[connection signal="region_started" from="RegionSubmenu/Panel/VBoxContainer/Top/RegionButtons" to="RegionSubmenu" method="_on_RegionButtons_region_started"]
[connection signal="pressed" from="RegionSubmenu/Panel/VBoxContainer/Top/RegionButtons/LeftArrow" to="RegionSubmenu/Panel/VBoxContainer/Top/RegionButtons" method="_on_LeftArrow_pressed"]
[connection signal="pressed" from="RegionSubmenu/Panel/VBoxContainer/Top/RegionButtons/RightArrow" to="RegionSubmenu/Panel/VBoxContainer/Top/RegionButtons" method="_on_RightArrow_pressed"]
[connection signal="quit_pressed" from="SettingsMenu" to="MainMenu/VBoxContainer/System" method="_on_Quit_pressed"]
